--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ googleAnalytics = "UA-XXXXXXX-Y"
     author = "Lily Lang"
     description = "Professional Resume"
     og_image = "better-software.png"
-    twitterName = ""
+    twitterName = "@bascodes"
     ghRepo = "https://github.com/codewithbas/resume/"
     hugoRepo = "https://github.com/gohugoio/hugo/"
 
